--- a/Year 2023/Data Science/DS22/assignment-0-numpy-matplotlib.ipynb
+++ b/Year 2023/Data Science/DS22/assignment-0-numpy-matplotlib.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -68,18 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[ 2,  2,  3],\n",
-       "       [ 4,  7,  6],\n",
-       "       [ 7,  8, 12]])"
-      ]
+      "text/plain": "array([[ 2,  2,  3],\n       [ 4,  7,  6],\n       [ 7,  8, 12]])"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,18 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[ 1,  4,  9],\n",
-       "       [ 4, 10, 18],\n",
-       "       [ 7, 16, 27]])"
-      ]
+      "text/plain": "array([[ 1,  4,  9],\n       [ 4, 10, 18],\n       [ 7, 16, 27]])"
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,25 +164,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I:\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mI:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mII:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(a[\u001b[38;5;241m1\u001b[39m,:])\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+      "I:\n",
+      "6\n",
+      "II:\n",
+      "[4 5 6]\n",
+      "III:\n",
+      "[4 5 6]\n",
+      "IV:\n",
+      "[1 4 7]\n",
+      "V:\n",
+      "[[1]\n",
+      " [4]\n",
+      " [7]]\n",
+      "VI:\n",
+      "[[1 2]\n",
+      " [4 5]]\n",
+      "VII:\n",
+      "[[1 2]\n",
+      " [7 8]]\n",
+      "VIII:\n",
+      "[[3 2 1]\n",
+      " [9 8 7]]\n",
+      "IX:\n",
+      "[[6 5 4]\n",
+      " [9 8 7]]\n"
      ]
     }
    ],
@@ -246,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +268,7 @@
        "(2, 3, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,8 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = np.zeros((3,4))  #Create an array of zeros\n",
@@ -307,133 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "#Here goes your code\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[1. 1. 1.]\n",
-      "  [1. 1. 1.]\n",
-      "  [1. 1. 1.]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.ones((1,3,3)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10 15 20]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.   0.25 0.5  0.75 1.   1.25 1.5  1.75 2.  ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[7 7]\n",
-      " [7 7]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0.]\n",
-      " [0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 1.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.eye(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.00000000e+000 2.26413998e-314]\n",
-      " [2.26416679e-314 0.00000000e+000]\n",
-      " [0.00000000e+000 0.00000000e+000]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(h)"
+    "#Here goes your code"
    ]
   },
   {
@@ -1064,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
