--- a/Year 2023/Data Science/DS22/Assignment_1_without_code.ipynb
+++ b/Year 2023/Data Science/DS22/Assignment_1_without_code.ipynb
@@ -65,56 +65,51 @@
     }
    ],
    "source": [
+    "#Load house sales data from file kc_house_data.csv, print first records.\n",
     "#a)\n",
     "#Your code:\n",
     "with open(\"kc_house_data.csv\") as my_file:\n",
     "    print(pd.read_csv(my_file).head())\n",
-    "\n",
     "\n",
     "#Hint: read_csv(), head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id                True\n",
-      "date              True\n",
-      "price             True\n",
-      "bedrooms         False\n",
-      "bathrooms        False\n",
-      "sqft_living       True\n",
-      "sqft_lot          True\n",
-      "floors            True\n",
-      "waterfront       False\n",
-      "view             False\n",
-      "condition         True\n",
-      "grade             True\n",
-      "sqft_above        True\n",
-      "sqft_basement    False\n",
-      "yr_built          True\n",
-      "yr_renovated     False\n",
-      "zipcode           True\n",
-      "lat               True\n",
-      "long              True\n",
-      "sqft_living15     True\n",
-      "sqft_lot15        True\n",
-      "dtype: bool\n"
+      "Numerical:\n",
+      "['date', 'price', 'bedrooms', 'bathrooms', 'sqft_living', 'sqft_lot', 'floors', 'waterfront', 'view', 'waterfront', 'view', 'condition', 'grade', 'sqft_above', 'sqft_basement', 'yr_built', 'yr_renovated', 'lat', 'long', 'sqft_living15', 'sqft_lot15']\n",
+      "Categorical:\n",
+      "['id', 'zip']\n"
      ]
     }
    ],
    "source": [
+    "# Print the variable list. Select categorical and numerical variables.\n",
     "#b)\n",
+    "\n",
     "with open(\"kc_house_data.csv\") as my_file:\n",
     "    my_file = pd.read_csv(my_file)\n",
-    "    print(my_file.all())\n",
-    "    house_numerical_df = 2\n",
-    "    house_categorical_df = 2\n",
+    "    vals = my_file.columns.values.tolist()\n",
+    "    house_numerical_df = [\n",
+    "        \"date\", \"price\", \"bedrooms\", \"bathrooms\",\n",
+    "        \"sqft_living\", \"sqft_lot\", \"floors\", \"waterfront\",\n",
+    "        \"view\", \"waterfront\", \"view\", \"condition\", \"grade\",\n",
+    "        \"sqft_above\", \"sqft_basement\", \"yr_built\",\n",
+    "        \"yr_renovated\", \"lat\", \"long\", \"sqft_living15\", \"sqft_lot15\"]\n",
+    "\n",
+    "    house_categorical_df = [\"id\", \"zip\"]\n",
+    "\n",
+    "    print(\"Numerical:\")\n",
+    "    print(house_numerical_df)\n",
+    "    print(\"Categorical:\")\n",
+    "    print(house_categorical_df)\n",
     "\n",
     "\n"
    ]
@@ -127,8 +122,11 @@
    },
    "outputs": [],
    "source": [
+    "#Compute basic statistics of numerical variables. Are all of them meaningful?\n",
     "#c)\n",
     "#Your code:\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "#Hint: Function describe()"
