Added new page with reim

--- a/Year 2023/Data Science/DS22/assignment-0-numpy.ipynb
+++ b/Year 2023/Data Science/DS22/assignment-0-numpy.ipynb
@@ -20,7 +20,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -45,13 +48,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
     "mylist = [1., 2., 3., 4.]\n",
     "mynparray = np.array(mylist)\n",
-    "mynparray"
+    "print(mynparray)"
    ]
   },
   {
@@ -113,7 +119,7 @@
    "outputs": [],
    "source": [
     "empty_vector = np.empty(5)\n",
-    "print empty_vector"
+    "print (empty_vector)"
    ]
   },
   {
