--- a/Year 2023/Data Science/DS22/assignment-0-numpy-matplotlib.ipynb
+++ b/Year 2023/Data Science/DS22/assignment-0-numpy-matplotlib.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,18 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[ 2,  2,  3],\n",
-       "       [ 4,  7,  6],\n",
-       "       [ 7,  8, 12]])"
-      ]
+      "text/plain": "array([[ 2,  2,  3],\n       [ 4,  7,  6],\n       [ 7,  8, 12]])"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,22 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  0  0]\n",
-      " [ 0 10  0]\n",
-      " [ 0  0 27]]\n",
-      "[[1.         0.         0.        ]\n",
-      " [0.         0.4        0.        ]\n",
-      " [0.         0.         0.33333333]]\n",
-      "[[        1         4        27]\n",
-      " [      256      3125     46656]\n",
-      " [   823543  16777216 387420489]]\n"
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43ma\u001B[49m \u001B[38;5;241m*\u001B[39m b)\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(b \u001B[38;5;241m/\u001B[39m a)\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(a \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m a)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'a' is not defined"
      ]
     }
    ],
@@ -949,10 +941,10 @@
      "evalue": "name 'y' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [29], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x, jv(\u001b[38;5;241m1\u001b[39m,x), label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$J_\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m$\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m plt\u001b[38;5;241m.\u001b[39msubplot(\u001b[38;5;241m221\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m plt\u001b[38;5;241m.\u001b[39mscatter(x, \u001b[43my\u001b[49m)\n\u001b[1;32m      8\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscatter plot\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x, yv(\u001b[38;5;241m1\u001b[39m,x), label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$Y_\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m$\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [29], line 7\u001B[0m\n\u001B[1;32m      5\u001B[0m plt\u001B[38;5;241m.\u001B[39mplot(x, jv(\u001B[38;5;241m1\u001B[39m,x), label \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mr\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m$J_\u001B[39m\u001B[38;5;132;01m{1}\u001B[39;00m\u001B[38;5;124m$\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      6\u001B[0m plt\u001B[38;5;241m.\u001B[39msubplot(\u001B[38;5;241m221\u001B[39m)\n\u001B[0;32m----> 7\u001B[0m plt\u001B[38;5;241m.\u001B[39mscatter(x, \u001B[43my\u001B[49m)\n\u001B[1;32m      8\u001B[0m plt\u001B[38;5;241m.\u001B[39mtitle(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mscatter plot\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      9\u001B[0m plt\u001B[38;5;241m.\u001B[39mplot(x, yv(\u001B[38;5;241m1\u001B[39m,x), label \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mr\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m$Y_\u001B[39m\u001B[38;5;132;01m{1}\u001B[39;00m\u001B[38;5;124m$\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'y' is not defined"
      ]
     },
     {
