--- a/Year 2023/Python/assignment-03/assignment-03.ipynb
+++ b/Year 2023/Python/assignment-03/assignment-03.ipynb
@@ -124,7 +124,7 @@
     "```python\n",
     "X = \"abc\" ; X.append(\"d\")\n",
     "```\n",
-    "> X to str, a nie tablica"
+    "> X to str, a nie tablica."
    ],
    "metadata": {
     "collapsed": false
@@ -136,7 +136,7 @@
     "```python\n",
     "L = list(map(pow, range(8)))\n",
     "```\n",
-    "> Brak argumentów dla pow()"
+    "> Brak argumentów dla pow()."
    ],
    "metadata": {
     "collapsed": false
@@ -177,10 +177,59 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## ZADANIE 3.4\n",
+    "Napisać program pobierający w pętli od użytkownika liczbę rzeczywistą x (typ float) i wypisujący x oraz trzecią potęgę x. Zatrzymanie programu następuje po wpisaniu z klawiatury stop. Jeżeli użytkownik wpisze napis zamiast liczby, to program ma wypisać komunikat o błędzie i kontynuować pracę."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0, 1728.0\n",
+      "Proszę wpisać liczbę zamiast napisu!\n",
+      "12.0, 1728.0\n",
+      "Proszę wpisać liczbę zamiast napisu!\n",
+      "12.0, 1728.0\n",
+      "Proszę wpisać liczbę zamiast napisu!\n",
+      "12.0, 1728.0\n",
+      "Proszę wpisać liczbę zamiast napisu!\n",
+      "12.0, 1728.0\n",
+      "Proszę wpisać liczbę zamiast napisu!\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [20], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m      2\u001B[0m     x \u001B[38;5;241m=\u001B[39m \u001B[38;5;28minput\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mEnter your number: \u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m     user_input \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mfloat\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;28mprint\u001B[39m(user_input, user_input\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m3\u001B[39m, sep\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m, \u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      5\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mtype\u001B[39m(x) \u001B[38;5;241m==\u001B[39m \u001B[38;5;28mstr\u001B[39m:\n",
+      "\u001B[0;31mValueError\u001B[0m: could not convert string to float: ''"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    x = input(\"Enter your number: \")\n",
+    "    user_input = float(x)\n",
+    "    print(user_input, user_input ** 3, sep=\", \")\n",
+    "    if type(x) == str:\n",
+    "        if x == \"stop\": break\n",
+    "        print(\"Proszę wpisać liczbę zamiast napisu!\")\n",
+    "\n",
+    "if type(x) != str:\n",
+    "    print(x, \", \", pow(x, 3))"
+   ],
    "metadata": {
     "collapsed": false
    }
