--- a/Year 2023/Python/assignment-03/assignment-03.ipynb
+++ b/Year 2023/Python/assignment-03/assignment-03.ipynb
@@ -154,17 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[1, 2, 4, 5, 7, 8, 10, 11, 13, 14, 16, 17, 19, 20, 22, 23, 25, 26, 28, 29]"
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "out = []\n",
     "for x in range(31):\n",
@@ -188,47 +179,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.0, 1728.0\n",
-      "Proszę wpisać liczbę zamiast napisu!\n",
-      "12.0, 1728.0\n",
-      "Proszę wpisać liczbę zamiast napisu!\n",
-      "12.0, 1728.0\n",
-      "Proszę wpisać liczbę zamiast napisu!\n",
-      "12.0, 1728.0\n",
-      "Proszę wpisać liczbę zamiast napisu!\n",
-      "12.0, 1728.0\n",
-      "Proszę wpisać liczbę zamiast napisu!\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [20], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m      2\u001B[0m     x \u001B[38;5;241m=\u001B[39m \u001B[38;5;28minput\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mEnter your number: \u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m     user_input \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mfloat\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;28mprint\u001B[39m(user_input, user_input\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m3\u001B[39m, sep\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m, \u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      5\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mtype\u001B[39m(x) \u001B[38;5;241m==\u001B[39m \u001B[38;5;28mstr\u001B[39m:\n",
-      "\u001B[0;31mValueError\u001B[0m: could not convert string to float: ''"
+      "5.0 125.0\n",
+      "10.0 1000.0\n",
+      "Error!! Type a number or stop!!\n",
+      "Bye!!\n"
      ]
     }
    ],
    "source": [
-    "while True:\n",
-    "    x = input(\"Enter your number: \")\n",
-    "    user_input = float(x)\n",
-    "    print(user_input, user_input ** 3, sep=\", \")\n",
-    "    if type(x) == str:\n",
-    "        if x == \"stop\": break\n",
-    "        print(\"Proszę wpisać liczbę zamiast napisu!\")\n",
-    "\n",
-    "if type(x) != str:\n",
-    "    print(x, \", \", pow(x, 3))"
+    "while 1:\n",
+    "    try:\n",
+    "        user_input = input(\"Please, enter the number: \")\n",
+    "        user_input = float(user_input)\n",
+    "        print(user_input, user_input ** 3)\n",
+    "    except ValueError:\n",
+    "        if user_input == \"stop\":\n",
+    "            print(\"Bye!!\")\n",
+    "            break\n",
+    "        print(\"Error!! Type a number or stop!!\")"
    ],
    "metadata": {
     "collapsed": false
