--- a/Year 2023/Python/assignment-03/assignment-03.ipynb
+++ b/Year 2023/Python/assignment-03/assignment-03.ipynb
@@ -179,19 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0 125.0\n",
-      "10.0 1000.0\n",
-      "Error!! Type a number or stop!!\n",
-      "Bye!!\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "while 1:\n",
     "    try:\n",
@@ -203,6 +192,47 @@
     "            print(\"Bye!!\")\n",
     "            break\n",
     "        print(\"Error!! Type a number or stop!!\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Zadanie 3.5\n",
+    "Napisać program rysujący \"miarkę\" o zadanej długości. Należy prawidłowo obsłużyć liczby składające się z kilku cyfr (ostatnia cyfra liczby ma znajdować się pod znakiem kreski pionowej). Należy zbudować pełny string, a potem go wypisać."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|....|....|....|....|....|....|....|....|....|....|....|....|\n",
+      "0    1    2    3    4    5    6    7    8    9   10   11   12\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = 13\n",
+    "up = \"|\" + \"\".join(\"....|\" for i in range(length - 1))\n",
+    "down = \"\"\n",
+    "for i in range(length):\n",
+    "    if i == 0:\n",
+    "        down += str(i)\n",
+    "    elif i < 10:\n",
+    "        down += \"    \" + str(i)\n",
+    "    else:\n",
+    "        down += \"   \" + str(i)\n",
+    "print(up)\n",
+    "print(down)"
    ],
    "metadata": {
     "collapsed": false
