--- a/Year 2023/Python/assignment-03/assignment-03.ipynb
+++ b/Year 2023/Python/assignment-03/assignment-03.ipynb
@@ -154,13 +154,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[1, 2, 4, 5, 7, 8, 10, 11, 13, 14, 16, 17, 19, 20, 22, 23, 25, 26, 28, 29]"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out = []\n",
-    "for x in range(31):\n",
-    "    if x % 3 != 0:\n",
-    "        out.append(x)\n",
+    "for i in range(31):\n",
+    "    if i % 3 != 0:\n",
+    "        out.append(i)\n",
     "out"
    ],
    "metadata": {
@@ -179,8 +188,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0 8.0\n",
+      "5.0 125.0\n",
+      "Error!! Type a number or stop!!\n",
+      "Bye!!\n"
+     ]
+    }
+   ],
    "source": [
     "while 1:\n",
     "    try:\n",
@@ -209,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -233,6 +253,157 @@
     "        down += \"   \" + str(i)\n",
     "print(up)\n",
     "print(down)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## ZADANIE 3.6\n",
+    "Napisać program rysujący prostokąt zbudowany z małych kratek. Należy zbudować pełny string, a potem go wypisać. Przykładowy prostokąt składający się 2x4 pól ma postać:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "+---+---+---+---+\n",
+      "|   |   |   |   |\n",
+      "+---+---+---+---+\n",
+      "|   |   |   |   |\n",
+      "+---+---+---+---+\n"
+     ]
+    }
+   ],
+   "source": [
+    "up, down = 2, 4\n",
+    "out = \"\"\n",
+    "for i in range(up * 2 + 1):\n",
+    "    if i % 2 == 0:\n",
+    "        out += \"\\n+\"\n",
+    "        for i in range(down):\n",
+    "            out += \"---+\"\n",
+    "    else:\n",
+    "        out += \"\\n|\"\n",
+    "        for i in range(down):\n",
+    "            out += \"   |\"\n",
+    "print(out)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Zadanie 3.8\n",
+    "Dla dwóch sekwencji liczb lub znaków znaleźć: (a) listę elementów występujących jednocześnie w obu sekwencjach (bez powtórzeń), (b) listę wszystkich elementów z obu sekwencji (bez powtórzeń)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2']\n",
+      "['1', 'g', '2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand_1 = \"12\"\n",
+    "rand_2 = \"2g\"\n",
+    "a = list(set(rand_1) & set(rand_2))\n",
+    "b = list(set(rand_1) | set(rand_2))\n",
+    "print(a)\n",
+    "print(b)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## ZADANIE 3.9\n",
+    "Mamy daną listę sekwencji (listy lub krotki) różnej długości zawierających liczby. Znaleźć listę zawierającą sumy liczb z tych sekwencji. Przykładowa sekwencja [[],[4],(1,2),[3,4],(5,6,7)], spodziewany wynik [0,4,3,7,18]."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[0, 4, 3, 7, 18]"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequence = [[], [4], (1, 2), [3, 4], (5, 6, 7)]\n",
+    "out = [sum(i) for i in sequence]\n",
+    "out"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### ZADANIE 3.10\n",
+    "Stworzyć słownik tłumaczący liczby zapisane w systemie rzymskim (z literami I, V, X, L, C, D, M) na liczby arabskie (podać kilka sposobów tworzenia takiego słownika). Mile widziany kod tłumaczący całą liczbę [funkcja roman2int()]."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "({'I': 1, 'V': 5, 'X': 10, 'L': 50, 'C': 100, 'D': 500, 'M': 1000},\n {'I': 1, 'V': 5, 'X': 10, 'L': 50, 'C': 100, 'D': 500, 'M': 1000})"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_1 = {'I': 1,\n",
+    "       'V': 5,\n",
+    "       'X': 10,\n",
+    "       'L': 50,\n",
+    "       'C': 100,\n",
+    "       'D': 500,\n",
+    "       'M': 1000\n",
+    "       }\n",
+    "x_2 = dict(I=1, V=5, X=10, L=50, C=100, D=500, M=1000)\n",
+    "x_1, x_2"
    ],
    "metadata": {
     "collapsed": false
