--- a/Year 2023/Python/assignment-03/assignment-03.ipynb
+++ b/Year 2023/Python/assignment-03/assignment-03.ipynb
@@ -373,7 +373,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### ZADANIE 3.10\n",
+    "## ZADANIE 3.10\n",
     "Stworzyć słownik tłumaczący liczby zapisane w systemie rzymskim (z literami I, V, X, L, C, D, M) na liczby arabskie (podać kilka sposobów tworzenia takiego słownika). Mile widziany kod tłumaczący całą liczbę [funkcja roman2int()]."
    ],
    "metadata": {
