--- a/year-2023/python/assignment-07/iterators.ipynb
+++ b/year-2023/python/assignment-07/iterators.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Zwracający 0, 1, 0, 1, 0, 1, ...,"
+    "### Zwracający 0, 1, 0, 1, 0, 1, ...,"
    ],
    "metadata": {
     "collapsed": false
@@ -55,9 +55,55 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Zwracający przypadkowo jedną wartość z (\"N\", \"E\", \"S\", \"W\") [błądzenie przypadkowe na sieci kwadratowej 2D]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 87,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S, E, S, W, W, N, N, S, E, N, "
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "class RandomDirection:\n",
+    "    def __iter__(self):\n",
+    "        self.current = 0\n",
+    "        self.map = {\n",
+    "            0: 'N', 1: 'E', 2: 'S', 3: 'W'\n",
+    "        }\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        self.current += 1\n",
+    "        return self.map.get(random.choice([i for i in range(4)]))\n",
+    "\n",
+    "\n",
+    "binary_numbers = RandomDirection()\n",
+    "iterator = iter(binary_numbers)\n",
+    "\n",
+    "for x in range(10):\n",
+    "    print(iterator.__next__(), end=\", \")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false
