--- a/year-2023/python/assignment-07/iterators.ipynb
+++ b/year-2023/python/assignment-07/iterators.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -65,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S, E, S, W, W, N, N, S, E, N, "
+      "S, W, E, E, S, W, S, E, W, W, "
      ]
     }
    ],
@@ -96,6 +96,50 @@
     "iterator = iter(binary_numbers)\n",
     "\n",
     "for x in range(10):\n",
+    "    print(iterator.__next__(), end=\", \")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Zwracający 0, 1, 2, 3, 4, 5, 6, 0, 1, 2, 3, 4, 5, 6, ... [numery dni tygodnia]."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, 1, 2, 3, 4, 5, 6, 0, 1, 2, 3, 4, 5, 6, 0, 1, 2, "
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class RandomDirection:\n",
+    "    def __iter__(self):\n",
+    "        self.current = 0\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        tmp = self.current\n",
+    "        self.current += 1\n",
+    "        return tmp % 7\n",
+    "\n",
+    "\n",
+    "binary_numbers = RandomDirection()\n",
+    "iterator = iter(binary_numbers)\n",
+    "\n",
+    "for x in range(17):\n",
     "    print(iterator.__next__(), end=\", \")"
    ],
    "metadata": {
