--- a/year-2023/python/assignment-07/iterators.ipynb
+++ b/year-2023/python/assignment-07/iterators.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S, W, E, E, S, W, S, E, W, W, "
+      "E, S, N, N, S, E, S, W, W, W, "
      ]
     }
    ],
@@ -81,19 +81,17 @@
     "\n",
     "class RandomDirection:\n",
     "    def __iter__(self):\n",
-    "        self.current = 0\n",
     "        self.map = {\n",
     "            0: 'N', 1: 'E', 2: 'S', 3: 'W'\n",
     "        }\n",
     "        return self\n",
     "\n",
     "    def __next__(self):\n",
-    "        self.current += 1\n",
     "        return self.map.get(random.choice([i for i in range(4)]))\n",
     "\n",
     "\n",
-    "binary_numbers = RandomDirection()\n",
-    "iterator = iter(binary_numbers)\n",
+    "random_direction = RandomDirection()\n",
+    "iterator = iter(random_direction)\n",
     "\n",
     "for x in range(10):\n",
     "    print(iterator.__next__(), end=\", \")"
@@ -125,7 +123,7 @@
    ],
    "source": [
     "\n",
-    "class RandomDirection:\n",
+    "class DaysOfWeek:\n",
     "    def __iter__(self):\n",
     "        self.current = 0\n",
     "        return self\n",
@@ -136,8 +134,8 @@
     "        return tmp % 7\n",
     "\n",
     "\n",
-    "binary_numbers = RandomDirection()\n",
-    "iterator = iter(binary_numbers)\n",
+    "days_of_week = DaysOfWeek()\n",
+    "iterator = iter(days_of_week)\n",
     "\n",
     "for x in range(17):\n",
     "    print(iterator.__next__(), end=\", \")"
