--- a/year-2023/data-science/forest-anal/anal.ipynb
+++ b/year-2023/data-science/forest-anal/anal.ipynb
@@ -302,8 +302,17 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Default"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 102,
    "outputs": [
     {
      "name": "stdout",
@@ -340,9 +349,11 @@
     }
    ],
    "source": [
+    "from sklearn import preprocessing\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import make_pipeline\n",
     "\n",
+    "scaler = preprocessing.StandardScaler().fit(X_train)\n",
     "pipe = make_pipeline(StandardScaler(), LogisticRegression(max_iter=100))\n",
     "pipe.fit(X_train, y_train)\n",
     "predictions = pipe.predict(X_test)\n",
