--- a/year-2023/data-science/forest-anal/anal.ipynb
+++ b/year-2023/data-science/forest-anal/anal.ipynb
@@ -413,8 +413,53 @@
     }
    ],
    "source": [
+    "lr = LogisticRegression(max_iter=1000)\n",
     "model = lr.fit(normalized_train_X, y_train)\n",
     "y_pred = model.predict(normalized_test_X)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print(np.unique(y_pred))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### H-TUNE"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "RandomizedSearchCV.__init__() missing 1 required positional argument: 'param_distributions'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [67], line 5\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodel_selection\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m RandomizedSearchCV\n\u001B[1;32m      3\u001B[0m lr \u001B[38;5;241m=\u001B[39m LogisticRegression(max_iter\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000\u001B[39m)\n\u001B[0;32m----> 5\u001B[0m random_rf \u001B[38;5;241m=\u001B[39m \u001B[43mRandomizedSearchCV\u001B[49m\u001B[43m(\u001B[49m\u001B[43mestimator\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mlr\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      6\u001B[0m \u001B[43m                              \u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      8\u001B[0m model \u001B[38;5;241m=\u001B[39m lr\u001B[38;5;241m.\u001B[39mfit(normalized_train_X, y_train)\n\u001B[1;32m      9\u001B[0m y_pred \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mpredict(normalized_test_X)\n",
+      "\u001B[0;31mTypeError\u001B[0m: RandomizedSearchCV.__init__() missing 1 required positional argument: 'param_distributions'"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "lr = LogisticRegression(max_iter=1000)\n",
+    "#TODO NOT WORKING!!!!!!!\n",
+    "random_rf = RandomizedSearchCV(estimator=lr,\n",
+    "                               param_distributions=param_vals)\n",
+    "\n",
+    "model = lr.fit(normalized_train_X, y_train)\n",
+    "y_pred = model.predict(normalized_test_X)\n",
+    "\n",
     "print(classification_report(y_test, y_pred))\n",
     "print(np.unique(y_pred))"
    ],
@@ -574,6 +619,7 @@
    ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
     "clf = DecisionTreeClassifier().fit(X_train, y_train)\n",
     "\n",
     "model = clf.fit(normalized_train_X, y_train)\n",
