--- a/year-2023/data-science/forest-anal/anal.ipynb
+++ b/year-2023/data-science/forest-anal/anal.ipynb
@@ -427,7 +427,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### H-TUNE"
+    "### V-TUNE"
    ],
    "metadata": {
     "collapsed": false
