--- a/year-2023/semantic-web/mashup/note.ipynb
+++ b/year-2023/semantic-web/mashup/note.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "wikidata = SPARQLWrapper.SPARQLWrapper(\"https://query.wikidata.org/sparql\")\n",
@@ -25,15 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 73,
    "outputs": [
     {
-     "data": {
-      "text/plain": "{'head': {'vars': ['s', 'p', 'o']},\n 'results': {'bindings': [{'s': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/l_track_track/26296'},\n    'p': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/vocab/l_track_track_link_type'},\n    'o': {'datatype': 'http://www.w3.org/2001/XMLSchema#int',\n     'type': 'typed-literal',\n     'value': '3'}},\n   {'s': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/l_track_track/26296'},\n    'p': {'type': 'uri',\n     'value': 'http://www.w3.org/2000/01/rdf-schema#label'},\n    'o': {'type': 'literal', 'value': 'l_track_track #26296'}},\n   {'s': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/l_track_track/26296'},\n    'p': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/vocab/l_track_track_link0'},\n    'o': {'datatype': 'http://www.w3.org/2001/XMLSchema#int',\n     'type': 'typed-literal',\n     'value': '4870565'}},\n   {'s': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/l_track_track/26296'},\n    'p': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/vocab/l_track_track_id'},\n    'o': {'datatype': 'http://www.w3.org/2001/XMLSchema#int',\n     'type': 'typed-literal',\n     'value': '26296'}},\n   {'s': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/l_track_track/26296'},\n    'p': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/vocab/l_track_track_link1'},\n    'o': {'datatype': 'http://www.w3.org/2001/XMLSchema#int',\n     'type': 'typed-literal',\n     'value': '2297579'}}]}}"
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'head': {'vars': ['artist_name']}, 'results': {'bindings': [{'artist_name': {'type': 'literal', 'value': 'Spectro'}}]}}\n",
+      "Spectro\n"
+     ]
     }
    ],
    "source": [
@@ -55,16 +55,20 @@
     "PREFIX db: <http://dbtune.org/musicbrainz/resource/>\n",
     "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
     "PREFIX dc: <http://purl.org/dc/elements/1.1/>\n",
+    "PREFIX artist: <http://dbtune.org/musicbrainz/resource/artist/>\n",
     "\n",
-    "SELECT DISTINCT *\n",
+    "SELECT DISTINCT ?artist_name\n",
     "WHERE {\n",
-    "    ?s ?p ?o\n",
+    "\n",
+    "        artist:0000a1ef-dcba-457b-96e4-5b594b3dd13e foaf:name ?artist_name ;\n",
     "}\n",
     "LIMIT 5\n",
     "\"\"\")\n",
     "musicdata.setReturnFormat(SPARQLWrapper.JSON)\n",
     "md_results = musicdata.query().convert()\n",
-    "md_results"
+    "print(md_results)\n",
+    "for result in md_results[\"results\"][\"bindings\"]:\n",
+    "    print(f'{result[\"artist_name\"][\"value\"]}')"
    ],
    "metadata": {
     "collapsed": false
@@ -72,9 +76,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 72,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'head': {'vars': ['artist_name', 'to_find']},\n 'results': {'bindings': [{'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q852335'}},\n   {'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q916968'}},\n   {'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q1469093'}},\n   {'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q1604035'}},\n   {'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q3393170'}}]}}"
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wikidata.setQuery(\"\"\"\n",
+    "PREFIX bd: <http://www.bigdata.com/rdf#>\n",
+    "PREFIX wd: <http://www.wikidata.org/entity/>\n",
+    "PREFIX wdt: <http://www.wikidata.org/prop/direct/>\n",
+    "PREFIX wikibase: <http://wikiba.se/ontology#>\n",
+    "\n",
+    "SELECT DISTINCT ?artist_name ?to_find\n",
+    "WHERE {\n",
+    "    ?artist_name wdt:P106 wd:Q215380 ;\n",
+    "}\n",
+    "LIMIT 5\n",
+    "\"\"\")\n",
+    "#Rodrigo y Gabriela\n",
+    "wikidata.setReturnFormat(SPARQLWrapper.JSON)\n",
+    "wk_results = wikidata.query().convert()\n",
+    "wk_results"
+   ],
    "metadata": {
     "collapsed": false
    }
