--- a/year-2023/semantic-web/mashup/mash-up.ipynb
+++ b/year-2023/semantic-web/mashup/mash-up.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,10 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "wikidata = SPARQLWrapper.SPARQLWrapper(\"https://query.wikidata.org/sparql\")\n",
+    "wikidata = SPARQLWrapper.SPARQLWrapper(\"https://dbpedia.org/sparql\")\n",
     "musicdata = SPARQLWrapper.SPARQLWrapper(\"http://dbtune.org/musicbrainz/sparql\")"
    ],
    "metadata": {
@@ -25,15 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'head': {'vars': ['artist_name']}, 'results': {'bindings': [{'artist_name': {'type': 'literal', 'value': 'Spectro'}}]}}\n",
-      "Spectro\n"
-     ]
+     "data": {
+      "text/plain": "{'head': {'vars': ['resource', 'value']},\n 'results': {'bindings': [{'resource': {'type': 'uri',\n     'value': 'http://dbtune.org/musicbrainz/resource/artist/08442748-9507-40c5-9cb6-47bdf67816f0'},\n    'value': {'type': 'literal',\n     'value': \"Dick Hyman & Mike Lipskin & Harry 'Sweets' Edison\"}}]}}"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -57,18 +57,17 @@
     "PREFIX dc: <http://purl.org/dc/elements/1.1/>\n",
     "PREFIX artist: <http://dbtune.org/musicbrainz/resource/artist/>\n",
     "\n",
-    "SELECT DISTINCT ?artist_name\n",
-    "WHERE {\n",
-    "\n",
-    "        artist:0000a1ef-dcba-457b-96e4-5b594b3dd13e foaf:name ?artist_name ;\n",
+    "SELECT DISTINCT ?resource ?value\n",
+    "WHERE { ?resource <http://xmlns.com/foaf/0.1/name> ?value;\n",
+    "FILTER(?value = \"Dick Hyman & Mike Lipskin & Harry 'Sweets' Edison\")\n",
     "}\n",
-    "LIMIT 5\n",
+    "ORDER BY ?resource ?value\n",
+    "\n",
     "\"\"\")\n",
     "musicdata.setReturnFormat(SPARQLWrapper.JSON)\n",
     "md_results = musicdata.query().convert()\n",
-    "print(md_results)\n",
-    "for result in md_results[\"results\"][\"bindings\"]:\n",
-    "    print(f'{result[\"artist_name\"][\"value\"]}')"
+    "\n",
+    "md_results"
    ],
    "metadata": {
     "collapsed": false
@@ -76,13 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'head': {'vars': ['artist_name', 'to_find']},\n 'results': {'bindings': [{'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q852335'}},\n   {'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q916968'}},\n   {'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q1469093'}},\n   {'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q1604035'}},\n   {'artist_name': {'type': 'uri',\n     'value': 'http://www.wikidata.org/entity/Q3393170'}}]}}"
+      "text/plain": "'Natsumi Abe (安倍 なつみ, Abe Natsumi, born August 10, 1981) is a Japanese singer and actress, a former member of Morning Musume, and currently a member of Dream Morning Musume.'"
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,18 +100,20 @@
     "PREFIX bd: <http://www.bigdata.com/rdf#>\n",
     "PREFIX wd: <http://www.wikidata.org/entity/>\n",
     "PREFIX wdt: <http://www.wikidata.org/prop/direct/>\n",
-    "PREFIX wikibase: <http://wikiba.se/ontology#>\n",
+    "PREFIX myartist: <\"\"\" + dbp_link + \"\"\">\n",
+    "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
     "\n",
-    "SELECT DISTINCT ?artist_name ?to_find\n",
+    "SELECT DISTINCT ?info\n",
     "WHERE {\n",
-    "    ?artist_name wdt:P106 wd:Q215380 ;\n",
+    "     myartist: rdfs:comment ?info .\n",
+    "     FILTER(LANG(?info) = \"en\")\n",
     "}\n",
-    "LIMIT 5\n",
+    "\n",
     "\"\"\")\n",
-    "#Rodrigo y Gabriela\n",
+    "\n",
     "wikidata.setReturnFormat(SPARQLWrapper.JSON)\n",
     "wk_results = wikidata.query().convert()\n",
-    "wk_results"
+    "wk_results['results']['bindings'][0]['info']['value']"
    ],
    "metadata": {
     "collapsed": false
