--- a/year-2023/cryptography/assignment-01/assignment-01.ipynb
+++ b/year-2023/cryptography/assignment-01/assignment-01.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.341673Z",
-     "start_time": "2023-11-01T13:13:33.949985Z"
+     "end_time": "2023-11-01T14:33:15.199897Z",
+     "start_time": "2023-11-01T14:33:14.809099Z"
     }
    },
    "outputs": [],
@@ -44,8 +44,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.350545Z",
-     "start_time": "2023-11-01T13:13:34.343617Z"
+     "end_time": "2023-11-01T14:33:15.201660Z",
+     "start_time": "2023-11-01T14:33:15.185685Z"
     }
    },
    "outputs": [],
@@ -66,8 +66,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.359696Z",
-     "start_time": "2023-11-01T13:13:34.351280Z"
+     "end_time": "2023-11-01T14:33:15.201912Z",
+     "start_time": "2023-11-01T14:33:15.189310Z"
     }
    },
    "outputs": [],
@@ -91,8 +91,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.377959Z",
-     "start_time": "2023-11-01T13:13:34.363612Z"
+     "end_time": "2023-11-01T14:33:15.202263Z",
+     "start_time": "2023-11-01T14:33:15.194656Z"
     }
    },
    "outputs": [
@@ -147,8 +147,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.378656Z",
-     "start_time": "2023-11-01T13:13:34.369962Z"
+     "end_time": "2023-11-01T14:33:15.202362Z",
+     "start_time": "2023-11-01T14:33:15.196890Z"
     }
    },
    "outputs": [],
@@ -223,8 +223,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.381344Z",
-     "start_time": "2023-11-01T13:13:34.377478Z"
+     "end_time": "2023-11-01T14:33:15.207530Z",
+     "start_time": "2023-11-01T14:33:15.203232Z"
     }
    }
   },
@@ -249,8 +249,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.390186Z",
-     "start_time": "2023-11-01T13:13:34.381454Z"
+     "end_time": "2023-11-01T14:33:15.217438Z",
+     "start_time": "2023-11-01T14:33:15.205876Z"
     }
    },
    "outputs": [],
@@ -272,8 +272,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.398415Z",
-     "start_time": "2023-11-01T13:13:34.391072Z"
+     "end_time": "2023-11-01T14:33:15.217814Z",
+     "start_time": "2023-11-01T14:33:15.214949Z"
     }
    },
    "outputs": [],
@@ -296,8 +296,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.530518Z",
-     "start_time": "2023-11-01T13:13:34.394423Z"
+     "end_time": "2023-11-01T14:33:15.382570Z",
+     "start_time": "2023-11-01T14:33:15.218452Z"
     }
    },
    "outputs": [
@@ -361,8 +361,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.819226Z",
-     "start_time": "2023-11-01T13:13:34.658056Z"
+     "end_time": "2023-11-01T14:33:15.746350Z",
+     "start_time": "2023-11-01T14:33:15.447548Z"
     }
    }
   },
@@ -386,8 +386,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.827492Z",
-     "start_time": "2023-11-01T13:13:34.816382Z"
+     "end_time": "2023-11-01T14:33:15.746667Z",
+     "start_time": "2023-11-01T14:33:15.741085Z"
     }
    }
   },
@@ -412,8 +412,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:34.830356Z",
-     "start_time": "2023-11-01T13:13:34.823959Z"
+     "end_time": "2023-11-01T14:33:15.758233Z",
+     "start_time": "2023-11-01T14:33:15.747618Z"
     }
    }
   },
@@ -425,45 +425,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-10\n",
       "Iteration -10: 15.50662285714252\n",
-      "-9\n",
       "Iteration -9: 18.885468571430216\n",
-      "-8\n",
       "Iteration -8: 22.385622857141847\n",
-      "-7\n",
       "Iteration -7: 17.937565714285935\n",
-      "-6\n",
       "Iteration -6: 21.4251028571455\n",
-      "-5\n",
       "Iteration -5: 22.87493428571446\n",
-      "-4\n",
       "Iteration -4: 2.0230885714285716\n",
-      "-3\n",
       "Iteration -3: 23.21037714285648\n",
-      "-2\n",
       "Iteration -2: 19.923580000000783\n",
-      "-1\n",
       "Iteration -1: 20.1145742857159\n",
-      "0\n",
       "Iteration 0: 23.56238571428511\n",
-      "1\n",
       "Iteration 1: 18.295399999999237\n",
-      "2\n",
       "Iteration 2: 15.557231428569516\n",
-      "3\n",
       "Iteration 3: 20.853228571429828\n",
-      "4\n",
       "Iteration 4: 17.56782571428613\n",
-      "5\n",
       "Iteration 5: 21.436097142857722\n",
-      "6\n",
       "Iteration 6: 20.055491428573003\n",
-      "7\n",
       "Iteration 7: 18.448682857143353\n",
-      "8\n",
       "Iteration 8: 19.88913428571377\n",
-      "9\n",
       "Iteration 9: 16.20747714285602\n"
      ]
     },
@@ -496,8 +476,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:52.262960Z",
-     "start_time": "2023-11-01T13:13:34.848196Z"
+     "end_time": "2023-11-01T14:33:33.021767Z",
+     "start_time": "2023-11-01T14:33:15.820449Z"
     }
    }
   },
@@ -520,8 +500,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:52.269232Z",
-     "start_time": "2023-11-01T13:13:52.263264Z"
+     "end_time": "2023-11-01T14:33:33.024446Z",
+     "start_time": "2023-11-01T14:33:33.022095Z"
     }
    }
   },
@@ -554,8 +534,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:52.270010Z",
-     "start_time": "2023-11-01T13:13:52.266569Z"
+     "end_time": "2023-11-01T14:33:33.030898Z",
+     "start_time": "2023-11-01T14:33:33.025186Z"
     }
    },
    "outputs": [],
@@ -613,8 +593,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:52.277360Z",
-     "start_time": "2023-11-01T13:13:52.271552Z"
+     "end_time": "2023-11-01T14:33:33.033157Z",
+     "start_time": "2023-11-01T14:33:33.030727Z"
     }
    }
   },
@@ -623,8 +603,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:52.279452Z",
-     "start_time": "2023-11-01T13:13:52.274341Z"
+     "end_time": "2023-11-01T14:33:33.039744Z",
+     "start_time": "2023-11-01T14:33:33.034152Z"
     }
    },
    "outputs": [
@@ -687,8 +667,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:52.324923Z",
-     "start_time": "2023-11-01T13:13:52.279597Z"
+     "end_time": "2023-11-01T14:33:33.080327Z",
+     "start_time": "2023-11-01T14:33:33.037634Z"
     }
    },
    "outputs": [],
@@ -719,8 +699,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:52.422356Z",
-     "start_time": "2023-11-01T13:13:52.312730Z"
+     "end_time": "2023-11-01T14:33:33.182974Z",
+     "start_time": "2023-11-01T14:33:33.053535Z"
     }
    }
   },
@@ -746,14 +726,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:52.422648Z",
-     "start_time": "2023-11-01T13:13:52.418545Z"
+     "end_time": "2023-11-01T14:33:33.183643Z",
+     "start_time": "2023-11-01T14:33:33.177562Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -770,7 +750,7 @@
      "data": {
       "text/plain": "[4, 8, 12, 16, 20]"
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +758,7 @@
    "source": [
     "def estimate_key_length(ciphertext, max_key_length):\n",
     "    estimated_lengths = []\n",
-    "\n",
+    "    \n",
     "    for k in range(1, max_key_length + 1):\n",
     "        ic_values = []\n",
     "        for i in range(k):\n",
@@ -801,22 +781,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:53.556762Z",
-     "start_time": "2023-11-01T13:13:52.490072Z"
+     "end_time": "2023-11-01T14:43:42.216718Z",
+     "start_time": "2023-11-01T14:43:41.064102Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "outputs": [
     {
-     "data": {
-      "text/plain": "'glob'"
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'raw_text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 16\u001B[0m\n\u001B[1;32m     11\u001B[0m         key \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m most_frequent_char\n\u001B[1;32m     13\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m key\n\u001B[0;32m---> 16\u001B[0m find_vigenere_key(\u001B[43mraw_text\u001B[49m, \u001B[38;5;241m4\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'raw_text' is not defined"
+     ]
     }
    ],
    "source": [
@@ -840,8 +823,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:53.606857Z",
-     "start_time": "2023-11-01T13:13:53.604644Z"
+     "end_time": "2023-11-04T07:52:22.966494Z",
+     "start_time": "2023-11-04T07:52:22.731406Z"
     }
    }
   },
@@ -864,8 +847,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T13:13:53.612837Z",
-     "start_time": "2023-11-01T13:13:53.607496Z"
+     "end_time": "2023-11-01T14:33:34.711041Z",
+     "start_time": "2023-11-01T14:33:34.704006Z"
     }
    }
   }
