Crypto 5 Done everything except 5 ex.

--- a/year-2023/cryptography/assignment-05/assignment-05.ipynb
+++ b/year-2023/cryptography/assignment-05/assignment-05.ipynb
@@ -8,20 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.747177Z",
-     "start_time": "2023-11-30T18:29:11.673103Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.758614Z",
-     "start_time": "2023-11-30T18:29:11.752307Z"
+     "end_time": "2023-12-06T17:17:57.024589Z",
+     "start_time": "2023-12-06T17:17:57.018805Z"
     }
    },
    "outputs": [],
@@ -55,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.761312Z",
-     "start_time": "2023-11-30T18:29:11.757357Z"
+     "end_time": "2023-12-06T17:17:57.034943Z",
+     "start_time": "2023-12-06T17:17:57.027003Z"
     }
    },
    "outputs": [
@@ -97,11 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.794122Z",
-     "start_time": "2023-11-30T18:29:11.765930Z"
+     "end_time": "2023-12-06T17:17:57.037992Z",
+     "start_time": "2023-12-06T17:17:57.032785Z"
     }
    },
    "outputs": [],
@@ -121,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.809778Z",
-     "start_time": "2023-11-30T18:29:11.775141Z"
+     "end_time": "2023-12-06T17:17:57.046283Z",
+     "start_time": "2023-12-06T17:17:57.038487Z"
     }
    },
    "outputs": [
@@ -162,26 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.810848Z",
-     "start_time": "2023-11-30T18:29:11.781246Z"
+     "end_time": "2023-12-06T17:17:57.082963Z",
+     "start_time": "2023-12-06T17:17:57.043493Z"
     }
    },
    "outputs": [],
    "source": [
     "def SubBytes(state):\n",
-    "    # Zainicjalizuj pustą tablicę 4x4 do przechowywania nowego stanu\n",
     "    new_state = [['00' for _ in range(4)] for _ in range(4)]\n",
     "\n",
-    "    # Iteruj po kolumnach i wierszach tablicy stanu\n",
     "    for i in range(4):\n",
     "        for j in range(4):\n",
-    "            # Pobierz bajt z obecnego stanu\n",
     "            current_byte = state[j][i]\n",
-    "\n",
-    "            # Pobierz wartość z SBox-a na podstawie pierwszej i drugiej cyfry bajtu\n",
     "            new_state[j][i] = SBox[int(current_byte[0], 16)][int(current_byte[1], 16)]\n",
     "\n",
     "    return new_state"
@@ -189,11 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.814543Z",
-     "start_time": "2023-11-30T18:29:11.793785Z"
+     "end_time": "2023-12-06T17:17:57.084785Z",
+     "start_time": "2023-12-06T17:17:57.052234Z"
     }
    },
    "outputs": [],
@@ -218,11 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.826793Z",
-     "start_time": "2023-11-30T18:29:11.796671Z"
+     "end_time": "2023-12-06T17:17:57.092855Z",
+     "start_time": "2023-12-06T17:17:57.058796Z"
     }
    },
    "outputs": [
@@ -261,20 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.827179Z",
-     "start_time": "2023-11-30T18:29:11.806426Z"
+     "end_time": "2023-12-06T17:17:57.093277Z",
+     "start_time": "2023-12-06T17:17:57.062773Z"
     }
    },
    "outputs": [],
    "source": [
     "def ShiftRows(state):\n",
-    "    # Zainicjalizuj pustą tablicę 4x4 do przechowywania nowego stanu\n",
     "    new_state = [['00' for _ in range(4)] for _ in range(4)]\n",
-    "\n",
-    "    # Przesuń wiersze\n",
     "    for i in range(4):\n",
     "        new_state[i] = state[i][i:] + state[i][:i]\n",
     "\n",
@@ -283,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.915538Z",
-     "start_time": "2023-11-30T18:29:11.812861Z"
+     "end_time": "2023-12-06T17:17:57.093504Z",
+     "start_time": "2023-12-06T17:17:57.068339Z"
     }
    },
    "outputs": [
@@ -326,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def multiply_GF(a, b):\n",
@@ -343,18 +321,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.915795Z",
-     "start_time": "2023-11-30T18:29:11.820105Z"
+     "end_time": "2023-12-06T17:17:57.094511Z",
+     "start_time": "2023-12-06T17:17:57.072558Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.917622Z",
-     "start_time": "2023-11-30T18:29:11.828234Z"
+     "end_time": "2023-12-06T17:17:57.094683Z",
+     "start_time": "2023-12-06T17:17:57.077750Z"
     }
    },
    "outputs": [],
@@ -368,16 +346,16 @@
     "                result ^= multiply_GF(int(state[i][col], 16), int(A[row][i], 16))\n",
     "            new_state[row][col] = format(result, '02x')\n",
     "\n",
-    "    return new_state\n"
+    "    return new_state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.917827Z",
-     "start_time": "2023-11-30T18:29:11.833900Z"
+     "end_time": "2023-12-06T17:17:57.094761Z",
+     "start_time": "2023-12-06T17:17:57.080331Z"
     }
    },
    "outputs": [],
@@ -390,11 +368,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.918639Z",
-     "start_time": "2023-11-30T18:29:11.862302Z"
+     "end_time": "2023-12-06T17:17:57.096947Z",
+     "start_time": "2023-12-06T17:17:57.083387Z"
     }
    },
    "outputs": [
@@ -459,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.921363Z",
-     "start_time": "2023-11-30T18:29:11.868969Z"
+     "end_time": "2023-12-06T17:17:57.097097Z",
+     "start_time": "2023-12-06T17:17:57.087034Z"
     }
    },
    "outputs": [],
@@ -474,11 +452,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.929667Z",
-     "start_time": "2023-11-30T18:29:11.877860Z"
+     "end_time": "2023-12-06T17:17:57.097381Z",
+     "start_time": "2023-12-06T17:17:57.089493Z"
     }
    },
    "outputs": [],
@@ -488,11 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.930751Z",
-     "start_time": "2023-11-30T18:29:11.887845Z"
+     "end_time": "2023-12-06T17:17:57.108392Z",
+     "start_time": "2023-12-06T17:17:57.096492Z"
     }
    },
    "outputs": [
@@ -586,11 +564,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.930933Z",
-     "start_time": "2023-11-30T18:29:11.898889Z"
+     "end_time": "2023-12-06T17:17:57.108573Z",
+     "start_time": "2023-12-06T17:17:57.099543Z"
     }
    },
    "outputs": [],
@@ -604,11 +582,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.931590Z",
-     "start_time": "2023-11-30T18:29:11.904283Z"
+     "end_time": "2023-12-06T17:17:57.165200Z",
+     "start_time": "2023-12-06T17:17:57.102725Z"
     }
    },
    "outputs": [
@@ -658,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "def state_to_msg(state):\n",
@@ -671,18 +649,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.932710Z",
-     "start_time": "2023-11-30T18:29:11.908606Z"
+     "end_time": "2023-12-06T17:17:57.171308Z",
+     "start_time": "2023-12-06T17:17:57.106104Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.934882Z",
-     "start_time": "2023-11-30T18:29:11.922512Z"
+     "end_time": "2023-12-06T17:17:57.173102Z",
+     "start_time": "2023-12-06T17:17:57.110054Z"
     }
    },
    "outputs": [],
@@ -706,11 +684,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-30T18:29:11.997858Z",
-     "start_time": "2023-11-30T18:29:11.932815Z"
+     "end_time": "2023-12-06T17:17:57.173638Z",
+     "start_time": "2023-12-06T17:17:57.115901Z"
     }
    },
    "outputs": [
